force-app/main/default/objects/ICON_Default_Store_Owner__c/ICON_Default_Store_Owner__c.object-meta.xml
<CustomObject>
    <description>Stores default store owner for each store</description>
    <label>ICON Default Store Owner</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICON Default Store Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>