force-app/main/default/objects/ICON_Default_Store_Owner__c/fields/Default_Store_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Store_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Store Owner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Default store manager must be an active user</errorMessage>
        <filterItems>
            <field>$User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>ICON_Default_Store_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>