force-app/main/default/objects/ICON_Default_Store_Owner__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A02</fullName>
            </value>
            <value>
                <fullName>A03</fullName>
            </value>
            <value>
                <fullName>A05</fullName>
            </value>
            <value>
                <fullName>A06</fullName>
            </value>
            <value>
                <fullName>A07</fullName>
            </value>
            <value>
                <fullName>A09</fullName>
            </value>
            <value>
                <fullName>A11</fullName>
            </value>
            <value>
                <fullName>A90</fullName>
            </value>
            <value>
                <fullName>B01</fullName>
            </value>
            <value>
                <fullName>B02</fullName>
            </value>
            <value>
                <fullName>C01</fullName>
            </value>
            <value>
                <fullName>C02</fullName>
            </value>
            <value>
                <fullName>C03</fullName>
            </value>
            <value>
                <fullName>C04</fullName>
            </value>
            <value>
                <fullName>C05</fullName>
            </value>
            <value>
                <fullName>C06</fullName>
            </value>
            <value>
                <fullName>C07</fullName>
            </value>
            <value>
                <fullName>C08</fullName>
            </value>
            <value>
                <fullName>D01</fullName>
            </value>
            <value>
                <fullName>E02</fullName>
            </value>
            <value>
                <fullName>F01</fullName>
            </value>
            <value>
                <fullName>F02</fullName>
            </value>
            <value>
                <fullName>F03</fullName>
            </value>
            <value>
                <fullName>F04</fullName>
            </value>
            <value>
                <fullName>F05</fullName>
            </value>
            <value>
                <fullName>F06</fullName>
            </value>
            <value>
                <fullName>F07</fullName>
            </value>
            <value>
                <fullName>F08</fullName>
            </value>
            <value>
                <fullName>F09</fullName>
            </value>
            <value>
                <fullName>F10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>