force-app/main/default/objects/ICON_Default_Store_Owner__c/fields/TECH_Store__c.field-meta.xml
<CustomField>
    <fullName>TECH_Store__c</fullName>
    <description>Used for import (external Id)</description>
    <externalId>true</externalId>
    <label>TECH Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>