force-app/main/default/objects/ICON_Default_Store_Owner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Default_Store_Owner__c</columns>
    <columns>Store__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>